# kira-demo

./: Cargo.toml  readme.md
src/: demo_select.rs  drum_fill_demo.rs  main.rs  underwater_demo.rs
src/ui/: mod.rs  style.rs
src/ui/common/: header.rs  mod.rs  screen_wrapper.rs
src/ui/screen/: demo_select.rs  drum_fill_demo.rs  mod.rs  underwater_demo.rs
src/ui/screen/drum_fill_demo/: beat_display.rs
