[package]
name = "kira-demo"
version = "0.1.0"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2.0"
kira = {path = "../kira/kira"}

[profile.dev]
opt-level = 3
