[package]
name = "kira-demo"
version = "0.1.0"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.2.0", features = ["tokio"]}
kira = "0.3.0"

[profile.dev]
opt-level = 1
